--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-30 02:45 -->
+<!-- 2022-11-30 11:00 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf354692">1. 妙妙文章</a>
+<li><a href="#orgf57af15">1. 妙妙文章</a>
 <ul>
-<li><a href="#org3c7b524">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgd5be984">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org1d4bdfd">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orga0b08d6">1.4. 关于编辑器</a></li>
-<li><a href="#org002abc8">1.5. 关于代码</a>
+<li><a href="#orgac36616">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org80b998a">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgcc18dcb">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org129c473">1.4. 关于编辑器</a></li>
+<li><a href="#org8f12288">1.5. 关于代码</a>
 <ul>
-<li><a href="#org95b4607">1.5.1. Lisp</a></li>
+<li><a href="#org4678acc">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgaacac11">1.6. 关于CPU</a></li>
-<li><a href="#org5a799fa">1.7. 关于算法</a>
+<li><a href="#org4754058">1.6. 关于CPU</a></li>
+<li><a href="#org7d7745c">1.7. 关于算法</a>
 <ul>
-<li><a href="#org5a8982f">1.7.1. 关于随机</a></li>
+<li><a href="#orga0e9e3a">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgbe936a1">1.8. 关于AI</a></li>
-<li><a href="#org98271dc">1.9. 关于软件</a>
+<li><a href="#orga5077b0">1.8. 关于AI</a></li>
+<li><a href="#org4847bb7">1.9. 关于软件</a>
 <ul>
-<li><a href="#org3df6e0b">1.9.1. SQLite</a></li>
+<li><a href="#org587cea8">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgc000070">1.10. 关于workflow</a></li>
+<li><a href="#org9dd236e">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgdaa6371">2. 棒棒视频</a>
+<li><a href="#org59fe884">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgaeab293">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgcbf721c">2.2. 迷因水母</a></li>
-<li><a href="#org17f75cb">2.3. 各种剧</a></li>
-<li><a href="#org6c45c32">2.4. 电影</a></li>
+<li><a href="#org1895937">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org51ccb12">2.2. 迷因水母</a></li>
+<li><a href="#org521844c">2.3. 各种剧</a></li>
+<li><a href="#org24880b4">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgd8b3a25">3. 快乐游戏</a></li>
-<li><a href="#org5c3794e">4. 宝藏博主</a></li>
-<li><a href="#org7a1907f">5. 有意思的</a>
+<li><a href="#org9d3e1d2">3. 快乐游戏</a></li>
+<li><a href="#org2c603bb">4. 宝藏博主</a></li>
+<li><a href="#org2d85790">5. 有意思的</a>
 <ul>
-<li><a href="#orgb3388ef">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org707d2b8">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org30ffb5e">6. 我想玩的</a></li>
+<li><a href="#org3ddb15c">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgf354692" class="outline-2">
-<h2 id="orgf354692"><span class="section-number-2">1.</span> <a href="#orgf354692">妙妙文章</a></h2>
+<div id="outline-container-orgf57af15" class="outline-2">
+<h2 id="orgf57af15"><span class="section-number-2">1.</span> <a href="#orgf57af15">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgc4ccf47">
+<figure id="org5fdcae0">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -498,8 +498,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org3c7b524" class="outline-3">
-<h3 id="org3c7b524"><span class="section-number-3">1.1.</span> <a href="#org3c7b524">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgac36616" class="outline-3">
+<h3 id="orgac36616"><span class="section-number-3">1.1.</span> <a href="#orgac36616">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -540,8 +540,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgd5be984" class="outline-3">
-<h3 id="orgd5be984"><span class="section-number-3">1.2.</span> <a href="#orgd5be984">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org80b998a" class="outline-3">
+<h3 id="org80b998a"><span class="section-number-3">1.2.</span> <a href="#org80b998a">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -571,8 +571,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org1d4bdfd" class="outline-3">
-<h3 id="org1d4bdfd"><span class="section-number-3">1.3.</span> <a href="#org1d4bdfd">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgcc18dcb" class="outline-3">
+<h3 id="orgcc18dcb"><span class="section-number-3">1.3.</span> <a href="#orgcc18dcb">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -606,8 +606,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orga0b08d6" class="outline-3">
-<h3 id="orga0b08d6"><span class="section-number-3">1.4.</span> <a href="#orga0b08d6">关于编辑器</a></h3>
+<div id="outline-container-org129c473" class="outline-3">
+<h3 id="org129c473"><span class="section-number-3">1.4.</span> <a href="#org129c473">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -623,8 +623,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org002abc8" class="outline-3">
-<h3 id="org002abc8"><span class="section-number-3">1.5.</span> <a href="#org002abc8">关于代码</a></h3>
+<div id="outline-container-org8f12288" class="outline-3">
+<h3 id="org8f12288"><span class="section-number-3">1.5.</span> <a href="#org8f12288">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -649,8 +649,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org95b4607" class="outline-4">
-<h4 id="org95b4607"><span class="section-number-4">1.5.1.</span> <a href="#org95b4607">Lisp</a></h4>
+<div id="outline-container-org4678acc" class="outline-4">
+<h4 id="org4678acc"><span class="section-number-4">1.5.1.</span> <a href="#org4678acc">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -673,8 +673,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgaacac11" class="outline-3">
-<h3 id="orgaacac11"><span class="section-number-3">1.6.</span> <a href="#orgaacac11">关于CPU</a></h3>
+<div id="outline-container-org4754058" class="outline-3">
+<h3 id="org4754058"><span class="section-number-3">1.6.</span> <a href="#org4754058">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -689,8 +689,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org5a799fa" class="outline-3">
-<h3 id="org5a799fa"><span class="section-number-3">1.7.</span> <a href="#org5a799fa">关于算法</a></h3>
+<div id="outline-container-org7d7745c" class="outline-3">
+<h3 id="org7d7745c"><span class="section-number-3">1.7.</span> <a href="#org7d7745c">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -709,8 +709,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org5a8982f" class="outline-4">
-<h4 id="org5a8982f"><span class="section-number-4">1.7.1.</span> <a href="#org5a8982f">关于随机</a></h4>
+<div id="outline-container-orga0e9e3a" class="outline-4">
+<h4 id="orga0e9e3a"><span class="section-number-4">1.7.1.</span> <a href="#orga0e9e3a">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -724,8 +724,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgbe936a1" class="outline-3">
-<h3 id="orgbe936a1"><span class="section-number-3">1.8.</span> <a href="#orgbe936a1">关于AI</a></h3>
+<div id="outline-container-orga5077b0" class="outline-3">
+<h3 id="orga5077b0"><span class="section-number-3">1.8.</span> <a href="#orga5077b0">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org98271dc" class="outline-3">
-<h3 id="org98271dc"><span class="section-number-3">1.9.</span> <a href="#org98271dc">关于软件</a></h3>
+<div id="outline-container-org4847bb7" class="outline-3">
+<h3 id="org4847bb7"><span class="section-number-3">1.9.</span> <a href="#org4847bb7">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -747,8 +747,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org3df6e0b" class="outline-4">
-<h4 id="org3df6e0b"><span class="section-number-4">1.9.1.</span> <a href="#org3df6e0b">SQLite</a></h4>
+<div id="outline-container-org587cea8" class="outline-4">
+<h4 id="org587cea8"><span class="section-number-4">1.9.1.</span> <a href="#org587cea8">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -762,8 +762,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc000070" class="outline-3">
-<h3 id="orgc000070"><span class="section-number-3">1.10.</span> <a href="#orgc000070">关于workflow</a></h3>
+<div id="outline-container-org9dd236e" class="outline-3">
+<h3 id="org9dd236e"><span class="section-number-3">1.10.</span> <a href="#org9dd236e">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgdaa6371" class="outline-2">
-<h2 id="orgdaa6371"><span class="section-number-2">2.</span> <a href="#orgdaa6371">棒棒视频</a></h2>
+<div id="outline-container-org59fe884" class="outline-2">
+<h2 id="org59fe884"><span class="section-number-2">2.</span> <a href="#org59fe884">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -833,8 +833,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgaeab293" class="outline-3">
-<h3 id="orgaeab293"><span class="section-number-3">2.1.</span> <a href="#orgaeab293">Veritasium 真理元素</a></h3>
+<div id="outline-container-org1895937" class="outline-3">
+<h3 id="org1895937"><span class="section-number-3">2.1.</span> <a href="#org1895937">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -865,8 +865,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgcbf721c" class="outline-3">
-<h3 id="orgcbf721c"><span class="section-number-3">2.2.</span> <a href="#orgcbf721c">迷因水母</a></h3>
+<div id="outline-container-org51ccb12" class="outline-3">
+<h3 id="org51ccb12"><span class="section-number-3">2.2.</span> <a href="#org51ccb12">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -881,8 +881,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org17f75cb" class="outline-3">
-<h3 id="org17f75cb"><span class="section-number-3">2.3.</span> <a href="#org17f75cb">各种剧</a></h3>
+<div id="outline-container-org521844c" class="outline-3">
+<h3 id="org521844c"><span class="section-number-3">2.3.</span> <a href="#org521844c">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -906,8 +906,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org6c45c32" class="outline-3">
-<h3 id="org6c45c32"><span class="section-number-3">2.4.</span> <a href="#org6c45c32">电影</a></h3>
+<div id="outline-container-org24880b4" class="outline-3">
+<h3 id="org24880b4"><span class="section-number-3">2.4.</span> <a href="#org24880b4">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -933,7 +933,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="org2cdc797">
+<figure id="org733a1f5">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -951,8 +951,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd8b3a25" class="outline-2">
-<h2 id="orgd8b3a25"><span class="section-number-2">3.</span> <a href="#orgd8b3a25">快乐游戏</a></h2>
+<div id="outline-container-org9d3e1d2" class="outline-2">
+<h2 id="org9d3e1d2"><span class="section-number-2">3.</span> <a href="#org9d3e1d2">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -982,8 +982,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5c3794e" class="outline-2">
-<h2 id="org5c3794e"><span class="section-number-2">4.</span> <a href="#org5c3794e">宝藏博主</a></h2>
+<div id="outline-container-org2c603bb" class="outline-2">
+<h2 id="org2c603bb"><span class="section-number-2">4.</span> <a href="#org2c603bb">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -994,7 +994,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgcc2d8d8">
+<figure id="org198f723">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1002,8 +1002,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7a1907f" class="outline-2">
-<h2 id="org7a1907f"><span class="section-number-2">5.</span> <a href="#org7a1907f">有意思的</a></h2>
+<div id="outline-container-org2d85790" class="outline-2">
+<h2 id="org2d85790"><span class="section-number-2">5.</span> <a href="#org2d85790">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1029,8 +1029,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb3388ef" class="outline-3">
-<h3 id="orgb3388ef"><span class="section-number-3">5.1.</span> <a href="#orgb3388ef">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org707d2b8" class="outline-3">
+<h3 id="org707d2b8"><span class="section-number-3">5.1.</span> <a href="#org707d2b8">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1042,8 +1042,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org30ffb5e" class="outline-2">
-<h2 id="org30ffb5e"><span class="section-number-2">6.</span> <a href="#org30ffb5e">我想玩的</a></h2>
+<div id="outline-container-org3ddb15c" class="outline-2">
+<h2 id="org3ddb15c"><span class="section-number-2">6.</span> <a href="#org3ddb15c">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1066,7 +1066,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-27 09:21</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 02:45</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:00</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
