--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-30 02:45 -->
+<!-- 2022-11-30 11:00 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,15 +45,16 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb70f763">1. 推送</a></li>
-<li><a href="#org29a1891">2. Git</a></li>
+<li><a href="#org7c2ad36">1. 推送</a></li>
+<li><a href="#orgf0b0a50">2. Git</a></li>
+<li><a href="#orgc7a0b23">3. XBox</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgb70f763" class="outline-2">
-<h2 id="orgb70f763"><span class="section-number-2">1.</span> <a href="#orgb70f763">推送</a></h2>
+<div id="outline-container-org7c2ad36" class="outline-2">
+<h2 id="org7c2ad36"><span class="section-number-2">1.</span> <a href="#org7c2ad36">推送</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -63,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org29a1891" class="outline-2">
-<h2 id="org29a1891"><span class="section-number-2">2.</span> <a href="#org29a1891">Git</a></h2>
+<div id="outline-container-orgf0b0a50" class="outline-2">
+<h2 id="orgf0b0a50"><span class="section-number-2">2.</span> <a href="#orgf0b0a50">Git</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -77,13 +78,25 @@
 </ul>
 </div>
 </div>
+
+<div id="outline-container-orgc7a0b23" class="outline-2">
+<h2 id="orgc7a0b23"><span class="section-number-2">3.</span> <a href="#orgc7a0b23">XBox</a></h2>
+<div class="outline-text-2" id="text-3">
+<ul class="org-ul">
+<li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
+<ul class="org-ul">
+<li><a href="https://www.nbmao.com/archives/4240">Pcap2socks-直接利用 SOCKS 代理的游戏加速器</a></li>
+</ul></li>
+</ul>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-27 09:19</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 02:45</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-11-30 10:59</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-30 11:00</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
